--- a/live-main/live.html
+++ b/live-main/live.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rel="icon" href="https://minhaz-0.github.io/MHTV/mh.png"/>
-    <title>JAGOBD-LIVE</title>
+    <title>MHTV</title>
    <!-- Latest compiled and minified CSS -->
    <link rel="stylesheet" href="bootstrap.min.css">
    <!-- jQuery library -->
@@ -59,32 +59,41 @@ box-shadow:0px 3px 20px 3px rgba(0,255,0,100);
 }
 marquee{
 border-radius: 0px 0px 0px 0px;
-width:100%;
+width:auto;
 border:2px solid red;
-margin:auto;
+margin:2px;
 font-wight:bold;
 color:#1f1;
 display:block;
+
+
 }
-.marquee span{
+
+span{
 display: inline-block;
 background: #ff0000;
 border-radius: 0px 0px 0px 0px;
-padding: 2px;
+padding: 1px;
 font-wight:bold;
 float:left;
 width:auto;
-line-height:35px;
-}
-.marquee marquee {
-display: block;
-line-height:35px;
-z-index:-1;
-margin-right:10px;
-width:auto;
-margin:auto;
+line-height:20px;
+color:#fff;
+
 
 }
+
+#player-wrapper{
+width:100%;
+z-index:999;
+}
+.yellow{
+color:#ffdd40;
+}
+
+
+
+
 
 </style>
 
@@ -94,6 +103,7 @@ margin:auto;
 <div class="container-fluid">
    <div class="row justify-content-center" style="margin-top: 5px;">
    <div class="col-12 col-lg-8">
+
 
    <div class="embed-responsive embed-responsive-16by9">
    <div id="player" class="embed-responsive-item">
@@ -110,11 +120,13 @@ margin:auto;
 
    <div class="col-12 col-lg-4">
 
+<div id="player-wrapper">
 <div class="marpuee yellow">
-<span><i class="fa fa-bell" style="font-size:26pt" aria-hidden="true"></i></span>
+<span><i class="fa fa-bell" style="font-size:12pt" aria-hidden="true"></i></span>
 <marquee scrollamount="5" direaction="left" onmouseover="stop()" onmouseout="start()">
+
 We are Updating our application as we update our application will be send notificatio to all user's thanks for MHTV official
-</marquee></div>
+</marquee></div></div>
 
    <div class="channel-list">
    <ul class="nav nav-tabs nav-justified" style="margin-bottom: 15px;">
