--- a/live-main/live.html
+++ b/live-main/live.html
@@ -151,7 +151,7 @@ We are Updating our application as we update our application will be send notifi
    </ul>
    <ul id="vidlink" class="thumbnail-slider d-flex flex-wrap">
    
-   <li class="Hindi"><a  href="javascript:void();" onclick="play.location.href='https://minhaz-0.github.io/IPL/?id=TEN_SPORTS_HD'"><img src="https://minhaz-0.github.io/MHTV/mh.png" class="print" alt=""></a></li>
+   <li class="Hindi"><a  href="javascript:void();" onclick="play.location.href='https://movies4kplay.wuaze.com/ten.html'"><img src="https://minhaz-0.github.io/MHTV/mh.png" class="print" alt=""></a></li>
    <li class="Hindi"><a href="javascript:void();" onclick="play.location.href=''"><img src=""  class="print" alt=""></a></li>
    <li class="Hindi"><a href="javascript:void();" onclick="play.location.href=''"><img src="" class="print"  alt=""></a></li>
    <li class="Hindi"><a href="javascript:void();" onclick="play.location.href=''"><img src="" class="print"  alt=""></a></li>
